apps/nginx/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-v2
  namespace: default
  labels:
    app: nginx-v2
spec:
  selector:
    app: nginx-v2
  ports:
    - name: http
      port: 80
      targetPort: 80
